tests/array/tidx_lit_err2.nim
discard """
  errormsg: "expected ordinal value for array index, got '\"string\"'"
  line: 5
"""
let x = ["string": 0, "index": 1]
